syntax = "proto3"; // This should be the first line always.

option java_multiple_files = true;
// java_package (file option): The package you want to use for your generated Java classes.
// If no explicit java_package option is given in the .proto file, then by default the proto package
// (specified using the "package" keyword in the .proto file) will be used. However, proto packages generally
// do not make good Java packages since proto packages are not expected to start with reverse domain names.
// If not generating Java code, this option has no effect.
option java_package = "org.apache.geode.generated.RegionServiceBenchMark";
// objc_class_prefix (file option): Sets the Objective-C class prefix which is prepended to all Objective-C generated
// classes and enums from this .proto. There is no default. You should use prefixes that are between 3-5
// uppercase characters as recommended by Apple. Note that all 2 letter prefixes are reserved by Apple.
option objc_class_prefix = "Geode";

service RegionServiceBenchMark {
    // Adding Separate
    rpc putMap (PutMapRequest) returns (PutMapReply) {
    }
    rpc getMap (GetMapRequest) returns (GetMapReply) {
    }
}

message MapKeyValueEntry {
    string key = 1;
    bytes value = 2;
}

message PutMapRequest {
    string regionName = 1;
    bytes key = 2;
    repeated MapKeyValueEntry mapFields = 3;
}

message PutMapReply {
    bool isSuccess = 1;
}

message GetMapRequest {
    string regionName = 1;
    bytes key = 2;
}

message GetMapReply {
    bool isSuccess = 1;
    repeated MapKeyValueEntry mapFields = 2;
}



